Use proper logger for MTR & Slight cleanup